fix: space-n -> size-space-n in docs

--- a/packages/swarm-docs/src/pages/Foundations/Spacing.mdx
+++ b/packages/swarm-docs/src/pages/Foundations/Spacing.mdx
@@ -13,87 +13,87 @@ Swarm uses a 4-base grid scale. The grig provides values in intervals of 4 with 
     <tr>
         <td className="text-code">0</td>
         <td>4px</td>
-        <td>--space-0</td>
+        <td>--size-space-0</td>
     </tr>
     <tr>
         <td className="text-code">1</td>
         <td>4px</td>
-        <td>--space-1</td>
+        <td>--size-space-1</td>
     </tr>
     <tr>
         <td className="text-code">2</td>
         <td>8px</td>
-        <td>--space-2</td>
+        <td>--size-space-2</td>
     </tr>
     <tr>
         <td className="text-code">3</td>
         <td>12px</td>
-        <td>--space-3</td>
+        <td>--size-space-3</td>
     </tr>
     <tr>
         <td className="text-code">4</td>
         <td>16px</td>
-        <td>--space-4</td>
+        <td>--size-space-4</td>
     </tr>
     <tr>
         <td className="text-code">5</td>
         <td>20px</td>
-        <td>--space-5</td>
+        <td>--size-space-5</td>
     </tr>
     <tr>
         <td className="text-code">6</td>
         <td>24px</td>
-        <td>--space-6</td>
+        <td>--size-space-6</td>
     </tr>
     <tr>
         <td className="text-code">7</td>
         <td>28px</td>
-        <td>--space-7</td>
+        <td>--size-space-7</td>
     </tr>
     <tr>
         <td className="text-code">8</td>
         <td>32px</td>
-        <td>--space-8</td>
+        <td>--size-space-8</td>
     </tr>
     <tr>
         <td className="text-code">9</td>
         <td>36px</td>
-        <td>--space-9</td>
+        <td>--size-space-9</td>
     </tr>
     <tr>
         <td className="text-code">10</td>
         <td>40px</td>
-        <td>--space-10</td>
+        <td>--size-space-10</td>
     </tr>
     <tr>
         <td className="text-code">11</td>
         <td>44px</td>
-        <td>--space-11</td>
+        <td>--size-space-11</td>
     </tr>
     <tr>
         <td className="text-code">12</td>
         <td>48px</td>
-        <td>--space-12</td>
+        <td>--size-space-12</td>
     </tr>
     <tr>
         <td className="text-code">13</td>
         <td>52px</td>
-        <td>--space-13</td>
+        <td>--size-space-13</td>
     </tr>
     <tr>
         <td className="text-code">14</td>
         <td>56px</td>
-        <td>--space-10</td>
+        <td>--size-space-10</td>
     </tr>
     <tr>
         <td className="text-code">15</td>
         <td>60px</td>
-        <td>--space-15</td>
+        <td>--size-space-15</td>
     </tr>
     <tr>
         <td className="text-code">16</td>
         <td>64px</td>
-        <td>--space-16</td>
+        <td>--size-space-16</td>
     </tr>
 </table>
 
