--- a/packages/swarm-docs/src/pages/Foundations/Typography.mdx
+++ b/packages/swarm-docs/src/pages/Foundations/Typography.mdx
@@ -16,6 +16,7 @@ a polished typographic system that provides hierarchy and ensures our content is
 <a className="text--link" href="#">Link Text</a>
 <p className="text--tiny">Tiny Text</p>
 <p className="text--body">Body text</p>
+<p className="text--small">Small text</p>
 <div className="inverted" style={{ backgroundColor: 'black' }}>
     <h1 className="text--display">Display Text</h1>
     <h2 className="text--pageTitle">Page Title</h2>
@@ -25,6 +26,7 @@ a polished typographic system that provides hierarchy and ensures our content is
     <a className="text--link" href="#">Link Text</a>
     <p className="text--tiny">Tiny Text</p>
     <p className="text--body">Body text</p>
+    <p className="text--small">Small text</p>
 </div>
 </>
 ```
